; ModuleID = '/home/carl/AnghaBench/nanomsg/src/aio/extr_fsm.c_nn_fsm_feed.c'
source_filename = "/home/carl/AnghaBench/nanomsg/src/aio/extr_fsm.c_nn_fsm_feed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nn_fsm = type { i64, i32 (%struct.nn_fsm*, i32, i32, i8*)*, i32 (%struct.nn_fsm*, i32, i32, i8*)* }

@NN_FSM_STATE_STOPPING = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @nn_fsm_feed(%struct.nn_fsm* %0, i32 %1, i32 %2, i8* %3) #0 {
  %5 = alloca %struct.nn_fsm*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  store %struct.nn_fsm* %0, %struct.nn_fsm** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i8* %3, i8** %8, align 8
  %9 = load %struct.nn_fsm*, %struct.nn_fsm** %5, align 8
  %10 = getelementptr inbounds %struct.nn_fsm, %struct.nn_fsm* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = load i64, i64* @NN_FSM_STATE_STOPPING, align 8
  %13 = icmp ne i64 %11, %12
  %14 = zext i1 %13 to i32
  %15 = call i64 @nn_slow(i32 %14)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %26

17:                                               ; preds = %4
  %18 = load %struct.nn_fsm*, %struct.nn_fsm** %5, align 8
  %19 = getelementptr inbounds %struct.nn_fsm, %struct.nn_fsm* %18, i32 0, i32 2
  %20 = load i32 (%struct.nn_fsm*, i32, i32, i8*)*, i32 (%struct.nn_fsm*, i32, i32, i8*)** %19, align 8
  %21 = load %struct.nn_fsm*, %struct.nn_fsm** %5, align 8
  %22 = load i32, i32* %6, align 4
  %23 = load i32, i32* %7, align 4
  %24 = load i8*, i8** %8, align 8
  %25 = call i32 %20(%struct.nn_fsm* %21, i32 %22, i32 %23, i8* %24)
  br label %35

26:                                               ; preds = %4
  %27 = load %struct.nn_fsm*, %struct.nn_fsm** %5, align 8
  %28 = getelementptr inbounds %struct.nn_fsm, %struct.nn_fsm* %27, i32 0, i32 1
  %29 = load i32 (%struct.nn_fsm*, i32, i32, i8*)*, i32 (%struct.nn_fsm*, i32, i32, i8*)** %28, align 8
  %30 = load %struct.nn_fsm*, %struct.nn_fsm** %5, align 8
  %31 = load i32, i32* %6, align 4
  %32 = load i32, i32* %7, align 4
  %33 = load i8*, i8** %8, align 8
  %34 = call i32 %29(%struct.nn_fsm* %30, i32 %31, i32 %32, i8* %33)
  br label %35

35:                                               ; preds = %26, %17
  ret void
}

declare dso_local i64 @nn_slow(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
